--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Electron boilerplate</title>
+    <title>Grinch Player</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
 <div class="container">
     <header>
-        <h1>Electron boilerplate</h1>
-        <p></p>
+        <h1>Grinch Player</h1>
+        <p>Плеер для технопранков</p>
     </header>
     <section class="main"></section>
     <footer></footer>
