--- a/index.html
+++ b/index.html
@@ -1,18 +1,46 @@
 <!doctype html>
-<html>
+<html lang="ru">
 <head>
     <meta charset="utf-8">
-    <title>Grinch Player</title>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
+    <script src="custom.js"></script>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<div class="container">
-    <header>
-        <h1>Grinch Player</h1>
-        <p>Плеер для технопранков</p>
-    </header>
-    <section class="main"></section>
-    <footer></footer>
-</div>
+<nav class="navbar" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand drag">
+        <div class="navbar-item">
+            <img src="static/icon-64.png" alt="Grinch Player">
+            <span class="text is-size-4">Grinch Player</span>
+        </div>
+    </div>
+
+    <div class="navbar-menu drag">
+        <div class="navbar-start">
+            <div class="navbar-item about"><i class="fa fa-phone-volume"></i>
+                Технопранк-плеер by&nbsp; <span class="author">Nik</span></div>
+            <a class="navbar-item no-drag" id="settings">
+                <i class="fa fa-gear"></i> Настройки</a>
+            <a class="navbar-item no-drag" id="discord">
+                <i class="fa fa-discord-alt"></i> Discord</a>
+        </div>
+
+        <div class="navbar-end">
+            <div class="navbar-item">
+                <div class="buttons no-drag">
+                    <a class="button" id="win-minimize"><i class="fa fa-window-minimize"></i></a>
+                    <a class="button" id="win-maximize"><i class="fa fa-window-maximize"></i></a>
+                    <a class="button" id="win-close"><i class="fa fa-window-close"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</nav>
+
+<main class="container main">
+    <h1 class="title">Grinch Player</h1>
+    <p class="subtitle">Плеер для технопранков</p>
+    <p class="has-text-centered"><i class="fa fa-3x fa-phone-square"></i></p>
+</main>
 </body>
 </html>
