--- a/index.html
+++ b/index.html
@@ -21,8 +21,17 @@
                 Технопранк-плеер by&nbsp; <span class="author">Nik</span></div>
             <a class="navbar-item no-drag" id="settings">
                 <i class="fa fa-gear"></i> Настройки</a>
-            <a class="navbar-item no-drag" id="discord">
-                <i class="fa fa-discord-alt"></i> Discord</a>
+
+            <div class="navbar-item no-drag has-dropdown is-hoverable">
+                <a class="navbar-link"><i class="fa fa-external-link"></i> Ссылки</a>
+
+                <div class="navbar-dropdown">
+                    <a class="navbar-item" id="youtube">
+                        <i class="fa fa-youtube-play"></i> ArsenalGrinch</a>
+                    <a class="navbar-item" id="discord">
+                        <i class="fa fa-discord-alt"></i> Discord</a>
+                </div>
+            </div>
         </div>
 
         <div class="navbar-end">
