Edit mode enable/disable, add toggle button

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="custom.js"></script>
     <link rel="stylesheet" href="index.css">
 </head>
-<body class="has-navbar-fixed-bottom">
+<body>
 
 <nav class="navbar top" role="navigation" aria-label="main navigation">
     <div class="navbar-brand drag">
@@ -51,8 +51,13 @@
 
 <nav class="level navbar is-fixed-bottom">
     <p class="level-item has-text-centered">
-        <a class="button" id="addblock">Добавить блок</a>
+        <a class="button" id="block-add">Добавить блок</a>
     </p>
+    <div class="level-right">
+        <a class="button edit is-medium is-dark" id="page-edit" title="Редактировать">
+            <i class="fa fa-edit"></i>
+        </a>
+    </div>
 </nav>
 
 </body>
