Add Howler, play dummy audio for each block

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 
 <nav class="level navbar is-fixed-bottom">
     <p class="level-item has-text-centered">
-        <a class="button" id="block-add">Добавить блок</a>
+        <a class="button" id="add-block">Добавить блок</a>
+        <a class="button" id="add-sound">Добавить звук</a>
     </p>
     <div class="level-right">
         <a class="button edit is-medium is-dark" id="page-edit" title="Редактировать">
