Allow adding sounds from single file

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
 <nav class="level navbar is-fixed-bottom">
     <p class="level-item has-text-centered">
-        <a class="button" id="add-block">Добавить блок</a>
-        <a class="button" id="add-sound">Добавить звук</a>
+        <a class="button" id="add-block"><i class="fa fa-code"></i> Тестовый блок</a>
+        <a class="button" id="add-sound"><i class="fa fa-file"></i> Звук из файла</a>
     </p>
     <div class="level-right">
         <a class="button edit is-medium is-dark" id="page-edit" title="Редактировать">
