Pause/resume playback on right mouse button when in Play mode

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                 <div class="navbar-dropdown">
                     <a class="navbar-item" id="youtube">
-                        <i class="fa fa-youtube-play"></i> ArsenalGrinch</a>
+                        <i class="fa fa-youtube-square"></i> ArsenalGrinch</a>
                     <a class="navbar-item" id="discord">
                         <i class="fa fa-discord-alt"></i> Discord</a>
                 </div>
