Allow adding multiple files and folders (scan with fast-glob)

--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
 
 <nav class="level navbar is-fixed-bottom">
     <p class="level-item has-text-centered">
-        <a class="button" id="add-block"><i class="fa fa-code"></i> Тестовый блок</a>
-        <a class="button" id="add-sound"><i class="fa fa-file"></i> Звук из файла</a>
+        <a class="button" id="add-block"><i class="fa fa-code"></i> Рыба</a>
+        <a class="button" id="add-sound"><i class="fa fa-file-o"></i> Файлы</a>
+        <a class="button" id="add-folder"><i class="fa fa-folder-o"></i> Папки</a>
     </p>
     <div class="level-right">
         <a class="button edit is-medium is-dark" id="page-edit" title="Редактировать">
