--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <i class="fa fa-edit"></i>
             </button>
 
-            <button class="button is-medium is-dark" id="deck-toggle" title="Колода">
+            <button class="button deck-toggle is-medium is-dark" id="deck-toggle" title="Колода">
                 <i class="fa fa-list"></i>
             </button>
 
