Add new sounds to the deck, refactor sound playing, rename overlay

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <p class="panel-heading">
         Осталось фраз: <span class="count">0</span>
     </p>
-    <div class="panel-block">
+    <div class="panel-search">
         <p class="control has-icons-left">
             <input class="input" type="text" placeholder="фильтр">
             <span class="icon is-left">
@@ -92,13 +92,8 @@
     <p class="panel-tabs">
         <a class="by-name is-active">по алфавиту</a>
         <a class="by-length">по длине</a>
+        <div class="deck-items" data-simplebar></div>
     </p>
-    <a class="panel-block is-active">один один один один один</a>
-    <a class="panel-block">два два</a>
-    <a class="panel-block">три</a>
-    <a class="panel-block">четыре четыре</a>
-    <a class="panel-block">пять пять пять пять пять пять пять пять</a>
-    <a class="panel-block">шесть шесть</a>
 </nav>
 
 </body>
