Added N blocks with auto position in batch mode

--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
                 <a class="button is-dark is-static">Добавить</a>
             </p>
             <p class="control is-expanded">
-                <input class="input" type="number" min="1">
+                <input class="input" type="number" min="1" id="batch-num">
             </p>
             <p class="control">
                 <a class="button is-dark is-static">фраз</a>
             </p>
             <p class="control">
-                <a class="button is-dark" title="Добавить">
+                <a class="button is-dark" id="batch-btn" title="Добавить">
                     <i class="fa fa-plus" aria-hidden="true"></i>
                 </a>
             </p>
