Replace ID identification with file hashes

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <a class="button is-dark is-static">фраз</a>
             </p>
             <p class="control">
-                <a class="button is-dark" id="batch-btn" title="Добавить">
+                <a class="button is-dark" id="batch-btn" title="Добавить на страницу">
                     <i class="fa fa-plus" aria-hidden="true"></i>
                 </a>
             </p>
