Add sorting/filtering in the deck using list.js

--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
     </div>
     <div class="panel-search">
         <p class="control has-icons-left">
-            <input class="input" type="text" placeholder="фильтр">
+            <input class="input search" type="text" placeholder="фильтр">
             <span class="icon is-left">
                 <i class="fa fa-search" aria-hidden="true"></i>
             </span>
         </p>
     </div>
     <p class="panel-tabs">
-        <a class="by-name is-active">по алфавиту</a>
-        <a class="by-length">по длине</a>
+        <a class="sort" data-sort="sound-text">по алфавиту</a>
+        <a class="sort by-length desc">по длине</a>
     </p>
     <div class="deck-items" data-simplebar></div>
 </nav>
