Add remove deck items button

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             </button>
         </div>
         <p class="level-item has-text-centered">
+            <button class="button is-large" id="remove-main"><i class="fa fa-window-close-o"></i> Очистить</button>
             <button class="button is-large" id="add-sound"><i class="fa fa-file-o"></i> Файлы</button>
             <button class="button is-large" id="add-folder"><i class="fa fa-folder-o"></i> Папки</button>
         </p>
