Drag and drop files/folders, fix issue with adding filtered items (reset search)

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <main class="main" id="main"></main>
 
-    <nav class="level navbar">
+    <nav class="level navbar" id="controls">
         <div class="level-left">
             <button class="button is-medium is-dark" id="left-toggle" title="Сайдбар">
                 <i class="fa fa-chevron-left"></i>
