Import previously saved pages, skip files that are not found

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
             </button>
         </div>
         <p class="level-item has-text-centered">
-            <button class="button" id="remove-main"><i class="fa fa-window-close-o"></i> Очистить</button>
-            <button class="button" id="add-sound"><i class="fa fa-file-o"></i> Файлы</button>
-            <button class="button" id="add-folder"><i class="fa fa-folder-o"></i> Папки</button>
-            <button class="button" id="save-all"><i class="fa fa-floppy-o"></i> Сохранить</button>
-            <button class="button" id="page-import"><i class="fa fa-sign-in"></i> Импорт</button>
-            <button class="button" id="page-export"><i class="fa fa-sign-out"></i> Экспорт</button>
+            <button class="button" id="remove-main" title="Очистить страницу"><i class="fa fa-window-close-o"></i> Очистить</button>
+            <button class="button" id="add-sound" title="Добавить файлы"><i class="fa fa-file-o"></i> Файлы</button>
+            <button class="button" id="add-folder" title="Добавить папки"><i class="fa fa-folder-o"></i> Папки</button>
+            <button class="button" id="save-all" title="Сохранить изменения"><i class="fa fa-floppy-o"></i> Сохранить</button>
+            <button class="button" id="page-import" title="Импортировать страницу"><i class="fa fa-sign-in"></i> Импорт</button>
+            <button class="button" id="page-export" title="Экспортировать страницу"><i class="fa fa-sign-out"></i> Экспорт</button>
         </p>
         <div class="level-right">
             <button class="button edit is-medium is-dark" id="page-edit" title="Редактировать">
