Add tooltips in Edit mode, rename and delete buttons for blocks

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <div class="navbar-end">
             <div class="navbar-item">
                 <div class="buttons no-drag">
-                    <a class="button" id="win-minimize"><i class="fa fa-window-minimize"></i></a>
-                    <a class="button" id="win-maximize"><i class="fa fa-window-maximize"></i></a>
-                    <a class="button" id="win-close"><i class="fa fa-window-close"></i></a>
+                    <button class="button" id="win-minimize"><i class="fa fa-window-minimize"></i></button>
+                    <button class="button" id="win-maximize"><i class="fa fa-window-maximize"></i></button>
+                    <button class="button" id="win-close"><i class="fa fa-window-close"></i></button>
                 </div>
             </div>
         </div>
@@ -89,18 +89,18 @@
     <div class="panel-block batch">
         <div class="field has-addons">
             <p class="control">
-                <a class="button is-dark is-static">Добавить</a>
+                <button class="button is-dark is-static">Добавить</button>
             </p>
             <p class="control is-expanded">
                 <input class="input" type="number" min="1" id="batch-num">
             </p>
             <p class="control">
-                <a class="button is-dark is-static">фраз</a>
+                <button class="button is-dark is-static">фраз</button>
             </p>
             <p class="control">
-                <a class="button is-dark" id="batch-btn" title="Добавить на страницу">
+                <button class="button is-dark" id="batch-btn" title="Добавить на страницу">
                     <i class="fa fa-plus" aria-hidden="true"></i>
-                </a>
+                </button>
             </p>
         </div>
     </div>
