Get offset values dynamically, save position related to main

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<nav class="navbar top" role="navigation" aria-label="main navigation">
+<nav class="navbar top" id="header" aria-label="main navigation">
     <div class="navbar-item navbar-brand drag">
         <img src="static/icon-64.png" alt="GrinchPlayer">
         <span class="text is-size-4">GrinchPlayer</span>
