Add left sidebar, compensate the new offset (left and right)

--- a/index.html
+++ b/index.html
@@ -24,6 +24,45 @@
     </div>
 </nav>
 
+<nav class="panel navigator" id="navigator">
+    <p class="panel-heading">Страницы</p>
+    <div class="panel-search">
+        <p class="control has-icons-left">
+            <input class="input search" id="page-search" type="text" placeholder="фильтр">
+            <span class="icon is-left">
+                <i class="fa fa-search" aria-hidden="true"></i>
+            </span>
+        </p>
+    </div>
+    <div class="pages">
+        <a class="panel-block">страница</a>
+        <a class="panel-block">страница</a>
+        <a class="panel-block">страница</a>
+        <a class="panel-block">страница</a>
+        <a class="panel-block">страница</a>
+    </div>
+
+    <p class="panel-heading">Проекты</p>
+    <div class="panel-search">
+        <p class="control has-icons-left">
+            <input class="input search" id="project-search" type="text" placeholder="фильтр">
+            <span class="icon is-left">
+                <i class="fa fa-search" aria-hidden="true"></i>
+            </span>
+        </p>
+    </div>
+    <div class="projects">
+        <a class="panel-block">проект</a>
+        <a class="panel-block">проект</a>
+        <a class="panel-block">проект</a>
+        <a class="panel-block">проект</a>
+        <a class="panel-block">проект</a>
+    </div>
+
+    <p class="panel-heading">Информация</p>
+    <div class="selections"></div>
+</nav>
+
 <div class="wrapper">
     <div class="notification is-success"></div>
 
@@ -105,7 +144,7 @@
     </div>
     <div class="panel-search">
         <p class="control has-icons-left">
-            <input class="input search" type="text" placeholder="фильтр">
+            <input class="input search" id="deck-search" type="text" placeholder="фильтр">
             <span class="icon is-left">
                 <i class="fa fa-search" aria-hidden="true"></i>
             </span>
