Tabs basic styles and formatting

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p class="control has-icons-left">
             <input class="input search" id="page-search" type="text" placeholder="фильтр">
             <span class="icon is-left">
-                <i class="fa fa-search" aria-hidden="true"></i>
+                <i class="fa fa-search"></i>
             </span>
         </p>
     </div>
@@ -47,7 +47,7 @@
         <p class="control has-icons-left">
             <input class="input search" id="project-search" type="text" placeholder="фильтр">
             <span class="icon is-left">
-                <i class="fa fa-search" aria-hidden="true"></i>
+                <i class="fa fa-search"></i>
             </span>
         </p>
     </div>
@@ -65,6 +65,56 @@
 
 <div class="wrapper">
     <div class="notification is-success"></div>
+
+    <div class="tabs is-toggle" id="tabs">
+        <ul>
+            <li class="is-active">
+                <a class="link">
+                    <span class="icon fa-stack">
+                        <i class="fa fa-circle fa-stack-2x"></i>
+                        <strong class="fa-stack-1x">1</strong>
+                    </span>
+                    <span>Дустер</span>
+                </a>
+            </li>
+            <li>
+                <a class="link">
+                    <span class="icon fa-stack">
+                        <i class="fa fa-circle fa-stack-2x"></i>
+                        <strong class="fa-stack-1x">2</strong>
+                    </span>
+                    <span>Нижегородец</span>
+                </a>
+            </li>
+            <li>
+                <a class="link">
+                    <span class="icon fa-stack">
+                        <i class="fa fa-circle fa-stack-2x"></i>
+                        <strong class="fa-stack-1x">3</strong>
+                    </span>
+                    <span>Чешка</span>
+                </a>
+            </li>
+            <li>
+                <a class="link">
+                    <span class="icon fa-stack">
+                        <i class="fa fa-circle fa-stack-2x"></i>
+                        <strong class="fa-stack-1x">4</strong>
+                    </span>
+                    <span>Очень длинное названиеееееееееееееее</span>
+                </a>
+            </li>
+            <li>
+                <a class="link">
+                    <span class="icon fa-stack">
+                        <i class="fa fa-circle fa-stack-2x"></i>
+                        <strong class="fa-stack-1x">5</strong>
+                    </span>
+                    <span>Глад Валакас</span>
+                </a>
+            </li>
+        </ul>
+    </div>
 
     <main class="main" id="main"></main>
 
@@ -89,7 +139,7 @@
             </div>
             <div class="level-bottom">
                 <div class="group add">
-                    <div class="text"><i class="fa fa-plus-square-o" aria-hidden="true"></i> Добавить</div>
+                    <div class="text"><i class="fa fa-plus-square-o"></i> Добавить</div>
                     <div class="buttons">
                         <button class="button" id="add-sound" title="Добавить файлы"><i class="fa fa-file-o"></i> Файлы</button>
                         <button class="button" id="add-folder" title="Добавить папки"><i class="fa fa-folder-o"></i> Папки</button>
@@ -98,7 +148,7 @@
                     </div>
                 </div>
                 <div class="group page">
-                    <div class="text"><i class="fa fa-table" aria-hidden="true"></i> Страница</div>
+                    <div class="text"><i class="fa fa-table"></i> Страница</div>
                     <div class="buttons">
                         <button class="button" id="remove-main" title="Очистить страницу"><i class="fa fa-window-close-o"></i> Удалить</button>
                         <button class="button" id="save-all" title="Сохранить изменения"><i class="fa fa-floppy-o"></i> Сохранить</button>
@@ -137,7 +187,7 @@
             </p>
             <p class="control">
                 <button class="button is-dark" id="batch-btn" title="Добавить на страницу">
-                    <i class="fa fa-plus" aria-hidden="true"></i>
+                    <i class="fa fa-plus"></i>
                 </button>
             </p>
         </div>
@@ -146,7 +196,7 @@
         <p class="control has-icons-left">
             <input class="input search" id="deck-search" type="text" placeholder="фильтр">
             <span class="icon is-left">
-                <i class="fa fa-search" aria-hidden="true"></i>
+                <i class="fa fa-search"></i>
             </span>
         </p>
     </div>
