Make tabs sortable, change numbers, save order to config

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <div class="tabs is-toggle" id="tabs">
         <ul>
-            <li class="item is-active" data-hash="f52b1dcab4b5b800">
+            <li class="tab is-active" data-hash="f52b1dcab4b5b800">
                 <a class="link">
                     <span class="icon fa-stack">
                         <i class="fa fa-circle fa-stack-2x"></i>
@@ -77,7 +77,7 @@
                     <span>Дустер</span>
                 </a>
             </li>
-            <li class="item" data-hash="b1bf341fbea70800">
+            <li class="tab" data-hash="b1bf341fbea70800">
                 <a class="link">
                     <span class="icon fa-stack">
                         <i class="fa fa-circle fa-stack-2x"></i>
@@ -86,7 +86,7 @@
                     <span>Нижегородец</span>
                 </a>
             </li>
-            <li class="item" data-hash="c78ce7c58eed3000">
+            <li class="tab" data-hash="c78ce7c58eed3000">
                 <a class="link">
                     <span class="icon fa-stack">
                         <i class="fa fa-circle fa-stack-2x"></i>
@@ -95,7 +95,7 @@
                     <span>Чешка</span>
                 </a>
             </li>
-            <li class="item" data-hash="902d1ce917f6e00">
+            <li class="tab" data-hash="902d1ce917f6e00">
                 <a class="link">
                     <span class="icon fa-stack">
                         <i class="fa fa-circle fa-stack-2x"></i>
