More tab actions: rename, add, delete

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <i class="fa fa-circle fa-stack-2x"></i>
                         <strong class="fa-stack-1x">1</strong>
                     </span>
-                    <span>Дустер</span>
+                    <span class="text">Дустер</span>
                 </a>
             </li>
             <li class="tab" data-hash="b1bf341fbea70800">
@@ -83,7 +83,7 @@
                         <i class="fa fa-circle fa-stack-2x"></i>
                         <strong class="fa-stack-1x">2</strong>
                     </span>
-                    <span>Нижегородец</span>
+                    <span class="text">Нижегородец</span>
                 </a>
             </li>
             <li class="tab" data-hash="c78ce7c58eed3000">
@@ -92,7 +92,7 @@
                         <i class="fa fa-circle fa-stack-2x"></i>
                         <strong class="fa-stack-1x">3</strong>
                     </span>
-                    <span>Чешка</span>
+                    <span class="text">Чешка</span>
                 </a>
             </li>
             <li class="tab" data-hash="902d1ce917f6e00">
@@ -101,7 +101,7 @@
                         <i class="fa fa-circle fa-stack-2x"></i>
                         <strong class="fa-stack-1x">4</strong>
                     </span>
-                    <span>Глад Валакас</span>
+                    <span class="text">Глад Валакас</span>
                 </a>
             </li>
         </ul>
