Add an empty tab if there are no active pages

--- a/index.html
+++ b/index.html
@@ -66,46 +66,7 @@
 <div class="wrapper">
     <div class="notification is-success"></div>
 
-    <div class="tabs is-toggle" id="tabs">
-        <ul>
-            <li class="tab is-active" data-hash="f52b1dcab4b5b800">
-                <a class="link">
-                    <span class="icon fa-stack">
-                        <i class="fa fa-circle fa-stack-2x"></i>
-                        <strong class="fa-stack-1x">1</strong>
-                    </span>
-                    <span class="text">Дустер</span>
-                </a>
-            </li>
-            <li class="tab" data-hash="b1bf341fbea70800">
-                <a class="link">
-                    <span class="icon fa-stack">
-                        <i class="fa fa-circle fa-stack-2x"></i>
-                        <strong class="fa-stack-1x">2</strong>
-                    </span>
-                    <span class="text">Нижегородец</span>
-                </a>
-            </li>
-            <li class="tab" data-hash="c78ce7c58eed3000">
-                <a class="link">
-                    <span class="icon fa-stack">
-                        <i class="fa fa-circle fa-stack-2x"></i>
-                        <strong class="fa-stack-1x">3</strong>
-                    </span>
-                    <span class="text">Чешка</span>
-                </a>
-            </li>
-            <li class="tab" data-hash="902d1ce917f6e00">
-                <a class="link">
-                    <span class="icon fa-stack">
-                        <i class="fa fa-circle fa-stack-2x"></i>
-                        <strong class="fa-stack-1x">4</strong>
-                    </span>
-                    <span class="text">Глад Валакас</span>
-                </a>
-            </li>
-        </ul>
-    </div>
+    <div class="tabs is-toggle" id="tabs"><ul></ul></div>
 
     <main class="main" id="main"></main>
 
