Separate deck lists

--- a/index.html
+++ b/index.html
@@ -143,8 +143,7 @@
         </div>
     </div>
     <div class="panel-search">
-        <p class="control has-icons-left">
-            <input class="input search" id="deck-search" type="text" placeholder="фильтр">
+        <p class="control has-icons-left" id="search-wrapper">
             <span class="icon is-left">
                 <i class="fa fa-search"></i>
             </span>
@@ -154,8 +153,7 @@
         <a class="sort" data-sort="sound-text">по алфавиту</a>
         <a class="sort by-length desc">по длине</a>
     </p>
-    <div class="deck-items" data-simplebar></div>
-    <div class="panel-block bottom">
+    <div class="panel-block bottom" id="deck-bottom">
         <button class="button is-link is-outlined is-fullwidth" id="remove-deck" title="Очистить колоду">
             Очистить
         </button>
